# job-hunter

./: .gitignore  README.md  pyproject.toml
projects/p2-Job-Intelligence-Extractor/: guideline.md  pyproject.toml
projects/p2-Job-Intelligence-Extractor/src/job_intelligence_extractor/template/: template.json
